--- a/About Us/aboutus.html
+++ b/About Us/aboutus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Elegant Chef |  About Us</title>
     <link rel="stylesheet" href="../Main Menu/css/normalize.css">
+    <link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <style>
