--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -7,6 +7,7 @@
     <title>The Elegant Chef | Contact</title>
     <link rel="stylesheet" href="../Main Menu/css/normalize.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <style>
