--- a/Main Menu/index.html
+++ b/Main Menu/index.html
@@ -12,7 +12,7 @@
         <meta name="description" content="A responsive folded flyer-like restaurant menu with some 3D" />
         <meta name="keywords" content="css3, perspective, 3d, jquery, transform3d, responsive, template, restaurant, menu, leaflet, folded, flyer, concept" />
         <meta name="author" content="Codrops" />
-        <link rel="shortcut icon" href="../favicon.ico"> 
+        <link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link href='http://fonts.googleapis.com/css?family=Raleway:300,500|Arvo:700' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
