--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>The Elegant Chef | Homepage</title>
 		<link rel="stylesheet" href="Main Menu/css/normalize.css">
+		<link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<iframe src="snow.html" id="snowoverlay" width="100%" height="122%" style="position: absolute; top: 0; left: 0; z-index: -1;"></iframe>
